--- a/src/pages/Main/MainComponents/Article/Article.scss
+++ b/src/pages/Main/MainComponents/Article/Article.scss
@@ -2,42 +2,26 @@
   border: 1px solid #efefef;
   background-color: #ffffff;
   width: 614px;
+  margin-bottom: 60px;
   header {
-    width: 614px;
     height: 60px;
-    padding: 16px;
+    padding: 0 16px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     img {
       width: 32px;
       height: 32px;
       border-radius: 50%;
     }
-    .id-dots-container {
+    .id-dots {
       width: 534px;
-      height: 18px;
-      margin: 0px 0px 0px 16px;
       display: flex;
-      .id {
-        width: 82.39px;
-        height: 17px;
-        margin-right: auto;
-      }
-      .dots {
-        margin-left: auto;
-        width: 24px;
-        height: 17px;
-        text-align: center;
-        position: relative;
-        img {
-          width: 16px;
-          height: 16px;
-          position: absolute;
-          left: 50%;
-          margin-left: -8px;
-          top: 50%;
-          margin-top: -8px;
-        }
+      align-items: center;
+      justify-content: space-between;
+      img {
+        width: 16px;
+        height: 16px;
       }
     }
   }
@@ -45,61 +29,54 @@
     width: 612px;
     img {
       width: 100%;
+      height: auto;
     }
   }
   .feed-bottom {
-    .buttons-container {
+    .icons-container {
       width: 612px;
       height: 40px;
-      margin: 4px 0px 0px 0px;
       padding: 0px 16px;
       display: flex;
       align-items: center;
-      .feed-button-left-container {
-        margin-right: auto;
-        margin-left: -8px;
+      justify-content: space-between;
+      .left-icons {
         display: flex;
-        .feed-button-left {
+        .left-icon {
           width: 40px;
           height: 40px;
-          text-align: center;
-          position: relative;
-          .feed-button-icon {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          img {
             width: 24px;
             height: 24px;
-            position: absolute;
-            left: 50%;
-            margin-left: -12px;
-            top: 50%;
-            margin-top: -12px;
           }
         }
       }
-      .feed-button-right {
+      .right-icon {
         width: 40px;
         height: 40px;
-        margin-left: auto;
-        margin-right: -8px;
+        display: flex;
         align-items: center;
-        vertical-align: middle;
-        position: relative;
-        .feed-save-button {
+        justify-content: center;
+        img {
           width: 22px;
-          padding-left: 2px;
+          height: 22px;
         }
       }
     }
     .likes-count {
-      height: 17.78px;
-      margin: 0px 0px 8px 0px;
+      height: 18px;
+      margin: 8px 0px;
       padding: 0px 16px;
-      font-size: 14px;
-      line-height: 18px;
-      font-weight: 700;
+      font: {
+        size: 14px;
+        weight: 700;
+      }
     }
     .feed-content {
       width: 614px;
-      height: 54px;
       padding: 0px 16px;
       font-size: 14px;
       line-height: 18px;
@@ -109,15 +86,16 @@
       }
     }
     .see-comments {
-      margin: 2px 0;
+      margin: 5px 0;
+      padding: 0 16px;
       font-size: 14px;
       color: #999999;
-      padding: 0 16px;
     }
     .comments-container {
+      margin-bottom: 5px;
+      padding: 0 16px;
       .comment {
-        margin-bottom: 2px;
-        margin: 1px 16px;
+        margin: 2px 0;
         .id {
           font-weight: 800;
           margin-right: 5px;
@@ -129,25 +107,16 @@
         }
       }
     }
-    .upload-time {
-      width: 614px;
-      height: 19px;
-      padding: 0px 0px 0px 16px;
-      margin: 0px 0px 4px 0px;
-      font-size: 10px;
-      line-height: 18px;
-      letter-spacing: 0.2px;
-      color: #999;
-    }
     .comment-input-container {
       width: 614px;
       height: 56px;
-      padding: 19.5px 16px;
-      margin: 4px 0px 0px;
+      padding: 0px 16px;
       border-top: 1px solid #efefef;
       display: flex;
-      #comment-input {
-        width: 550px;
+      align-items: center;
+      justify-content: space-between;
+      textarea {
+        width: 90%;
         height: 17px;
         margin: 0px;
         padding: 0px;
@@ -156,25 +125,22 @@
         color: #262626;
         border: 0;
         resize: none;
-        &:hover {
-          outline: 0px !important;
-          box-shadow: none;
-          border: none;
+        &:focus {
+          outline: none;
         }
       }
-      #comment-submmit-button {
-        width: 24.24px;
-        height: 17.78px;
+      button {
         font-weight: 600;
         font-size: 14px;
-        margin-left: 10px;
         color: #3897f0;
         border-style: none;
         text-align: center;
         padding: 0;
-        opacity: 0.3;
         &:hover {
           cursor: pointer;
+        }
+        &:focus {
+          outline: none;
         }
       }
     }
