--- a/src/pages/Main/MainComponents/Nav/Nav.scss
+++ b/src/pages/Main/MainComponents/Nav/Nav.scss
@@ -1,66 +1,62 @@
-.nav {
+.Nav {
   height: 77px;
   width: 100%;
   top: 0;
   background-color: #ffffff;
   border-bottom: 1px solid rgba(0, 0, 0, 0.0975);
   position: fixed;
-  // align-items: center;
   z-index: 5;
-  .nav-items-container {
+  .container {
     display: flex;
     align-items: center;
     max-width: 935px;
     height: 77px;
     align-items: center;
     margin: 0px auto;
-    .nav-left-items {
+    .left-logos {
       display: flex;
+      align-items: center;
       margin-right: auto;
-      .nav-logo {
+      .logo-icon {
         height: 24px;
         width: 24px;
       }
-      .nav-logo-line {
-        background-color: #262626;
+      .divider {
         height: 28px;
-        margin: 0 16px;
         width: 1px;
+        margin: 0 16px;
+        background-color: #262626;
       }
-      .nav-text-logo {
+      .logo-text {
         height: 29px;
         width: 103px;
       }
     }
-    .search-container {
+    .search {
       width: 215px;
       height: 28px;
       background-color: #fafafa;
       border: 1px solid rgba(0, 0, 0, 0.0975);
       border-radius: 3px;
-      .search-input {
+      input {
         width: 100%;
         height: 100%;
+        padding: 0;
         font-size: 14px;
         border: none;
         background-color: transparent;
         text-align: center;
       }
     }
-    .nav-right-items {
+    .right-icons {
       display: flex;
+      align-items: center;
       margin-left: auto;
-      .nav-right-item {
+      .icon {
+        display: flex;
+        align-items: center;
         margin-left: 30px;
-        .nav-search {
-          width: 24px;
-          height: 24px;
-        }
-        .nav-heart {
-          width: 24px;
-          height: 24px;
-        }
-        .nav-profile {
+        img {
           width: 24px;
           height: 24px;
         }
