inline style deleted

--- a/src/pages/Main/MainComponents/Article/Article.scss
+++ b/src/pages/Main/MainComponents/Article/Article.scss
@@ -143,6 +143,12 @@
           outline: none;
         }
       }
+      .submitNotYet {
+        opacity: 0.3;
+      }
+      .submitReady {
+        opacity: 1;
+      }
     }
   }
 }
